[tool.poetry]
name = "autonomous-devops-agent"
version = "0.1.0"
description = "An autonomous agent to generate CI/CD pipelines from architecture diagrams."
authors = ["Shardul Khandekar <khandekarshardul@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
crewai = "^0.30.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.110.0"
uvicorn = "[standard]"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"